--- a/templates/aep/show_aep.html.twig
+++ b/templates/aep/show_aep.html.twig
@@ -1,11 +1,146 @@
 {% extends "base.html.twig" %}
 
-{% block title %} {{ aep.id }} {% endblock %}
 
 {% block body %}
-    {{ aep.funding }}
+    <h1 class="mb-5">AEP {{ aep.type }} à {{ aep.source }}</h1>
+    <div class="text-right">
+        <a href="{{ path('aep_edit', {'id': aep.id}) }}" class="btn btn-success">Editer ce document</a>
+    </div>
+    <h2>Informations sur l'employer</h2>
+    <p>
+        Fiche remplie par <br>
+        Nom : <b>{{ user.name }}</b><br>
+        Email : <b>{{ user.email }}</b>
+    </p>
+    <hr>
+    <h3>Informations sur la fiche d'AEP</h3>
+    <h4>Informations locales</h4>
+    <p>
+        Région : {{ localInformations.region }} <br>
+        Département : {{ localInformations.department }} <br>
+        Arrondissement : {{ localInformations.borough }} <br>
+        Localité ou village : {{ localInformations.locality }} <br>
+        Qautier : {{ localInformations.district }} <br>
+        Population : {{ localInformations.population }} habitants <br>
+        <h5>Coordonnées GPS</h5>
+        Latitude : {{ gpsCoordinates.latitude }} <br>
+        Longitude : {{ gpsCoordinates.longitude }}
+    </p>
+    <hr>
+    <h4>Informations sur l'AEP</h4>
+    <p>
+        {% if aep.type is same as ('forage') %}
+            Profondeur : {{ aep.depth }} m <br>
+        {% endif %}
 
-    {% if stickingBack %}
-        {{ stickingBack.exist }}
-    {% endif %}
+        Année de construction : {{ aep.buildingYear|date("d/m/Y") }} <br>
+        Financement : {{ aep.funding }}
+
+        {% if aep.type is same as ('forage') %}
+            <h5>Dossier de recollement</h5>
+            Statut : {{ stickingBack.exist }} <br>
+            {% if stickingBack.comments %}
+                Commentaires : {{ stickingBack.comments }}
+            {% endif %}
+            <br>
+        {% endif %}
+
+        Capacité de production : {{ aep.productionCapacity }} m<sup>3</sup>/jour <br>
+        <h5>Stockage</h5>
+        Quantité : {{ storage.quantity }} m<sup>3</sup> <br>
+        Status : {{ storage.sufficient }} <br>
+        Etat de la structure : {{ storage.structureStatus }} <br>
+        <br>
+
+        {% if aep.type is same as ('prise-en-eau-de-surface') %}
+            <h5>Mode de communication entre l’agent ou comité degestion et la Commune</h5>
+            {% if agentCommunicationMode.contract %}
+                <i class="material-icons bg-success">check</i> Contrat <br>
+            {% endif %}
+            {% if agentCommunicationMode.CapacityBuilding %}
+                <i class="material-icons bg-success">check</i> Renforcement de capacité <br>
+            {% endif %}
+            {% if agentCommunicationMode.others %}
+                Autres : {{ agentCommunicationMode.others }} <br>
+            {% endif %}
+            <br>
+        {% endif %}
+
+        {% if aep.type != 'captage-par-source' %}
+            Longueur du réseau : {{ aep.networkLength }} m <br>
+        {% endif %}
+
+        Type d'adduction : {{ aep.adductionType }} <br><br>
+
+        {% if aep.type is same as ('captage-par-source') %}
+            Réseau linéaire : {{ aep.linearNetwork }} <br><br>
+        {% endif %}
+
+        <h5>Type d'équipement</h5>
+        Qualité de la pompe : {{ equipmentAep.pumpQuality }} <br>
+        {% if equipmentAep.others %}
+            Autres : {{ equipmentAep.others }} <br><br>
+        {% endif %}
+
+        <h5>Analyse et traitement de l'eau</h5>
+        {% if waterTraitmentAnalysis.unitTraitmentPresence is same as ('oui') %}
+            <i class="material-icons bg-success">check</i> Présence d'une unité de traitement <br>
+        {% endif %}
+        Fréquence de traitement de l'eau : {{ waterTraitmentAnalysis.analysisFrequency }} <br>
+        Date de la dernière analyse de l'eau : {{ waterTraitmentAnalysis.lastAnalysisAt|date("d/m/Y") }} <br>
+        Type de traitement appliqué : {{ waterTraitmentAnalysis.appliedTraitmentType }} <br><br>
+
+        Etat de fonctionement : {{ aep.operatingState }} <br><br>
+
+        <h5>Mode de gestion</h5>
+        Agent de gestion : {{ managementMode.managementAgent }} <br>
+        Autres : {{ managementMode.others }} <br>
+
+        <h5>Mode de financement</h5>
+        Mode facturation : {{ fundingMode.facturationMode }} <br>
+        Autres : {{ fundingMode.others }} <br><br>
+
+        <h5>Maintenance</h5>
+        Agent de maintenance : {{ maintenance.agent }} <br>
+        Autres : {{ maintenance.others }} <br><br>
+        <hr>
+
+        <h4>Informations propre à : {{ aep.source }}</h4>
+        {% if aep.source is same as ('pmh') or aep.source is same as ('autre') %}
+            Marque de pompe : {{ aepPmh.pompBrand }} <br>
+            Puissance de la pompe : {{ aepPmh.pumpPower }} <br>
+            Etat de la structure : {{ aepPmh.superstructure }} <br>
+            Chenal d'évacuation des eaux : {{ aepPmh.drainingChannel }} <br><br>
+
+            <h5>Puit perdu</h5>
+            Statut : {{ lostWell.exist }} <br>
+            Etat : {{ lostWell.functional }} <br><br>
+        {% elseif aep.source is same as ('source-amelioree') or aep.source is same as ('autre') %}
+            {% if aepImproveSource.superstructure %}
+                <i class="material-icons bg-success">check</i> Construction d'une superstructure <br>
+            {% endif %}
+            {% if aepImproveSource.pipeline %}
+                <i class="material-icons bg-success">check</i> Canalisation de l'eau <br>
+            {% endif %}
+        {% elseif source is same as ('puit-traditionel') or source is same as ('autre') %}
+            {% if aepTraditionalWell.bucket %}
+                <i class="material-icons bg-success">check</i> Présence d'un seau <br>
+            {% endif %}
+            {% if aepTraditionalWell.rope %}
+                <i class="material-icons bg-success">check</i> Présence d'une corde <br>
+            {% endif %}
+            {% if aepTraditionalWell.lid %}
+                <i class="material-icons bg-success">check</i> Présence d'une couverture du puit <br>
+            {% endif %}
+            {% if aepTraditionalWell.pulley %}
+                <i class="material-icons bg-success">check</i> Présence d'une poulie <br>
+            {% endif %}
+            {% if aepTraditionalWell.superstructure %}
+                <i class="material-icons bg-success">check</i> Construction d'une superstructure <br>
+            {% endif %}
+        {% endif %}
+
+    </p>
+
+    <a href="{{ path('aep_edit', {'id': aep.id}) }}" class="btn btn-success">Editer ce document</a>
 {% endblock %}
